--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <!-- saved from url=(0031)https://thedruidcollective.org/ -->
-<html lang="en-us" style="scroll-behavior: smooth;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<script type="text/javascript">
+<html lang="en-us" style="scroll-behavior: smooth;">
+	<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<link rel="icon" href="./Home_files/druid.jpg" type="image/x-icon">
+		<script type="text/javascript">
 			</script>
 	
 	<title>Home</title>
